updated modal container to not display unless it contains the class "is-visible"

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,11 @@ ul {
   justify-content: center;
 
 }
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  display: block;
+}
