--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,41 @@ ul {
 
 }
 
+.modal {
+  margin: auto;
+ display: inline-block;
+ box-sizing: border-box;
+ background: #fff;
+ padding: 15px;
+ width: 100%;
+ max-width: 300px;
+ text-align: left;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
 #modal-container {
   display: none;
 }
 
 #modal-container.is-visible {
-  display: block;
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  overflow: auto;
+  display: grid;
+  text-align: center;
 }
