--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,15 @@ ul {
   text-decoration: underline;
 }
 
+.modal-close:hover {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: red;
+  text-decoration: underline;
+}
+
 .modal h1 {
   max-width: 200px;
 }
