--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+
+}
+
 
 .pokemon-list {
     display: grid;
@@ -5,14 +9,46 @@
     grid-gap: 10px;
     margin: 100px 10px;
     list-style: none;
+    text-align: center;
   }
 
 .pokebutton {
+  display: inline-block;
+  background: #f1bb4e;
+  padding: 0.3em 1.2em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid rgba(255,255,255,0);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: #fff;
+  text-align: center;
+  transition: all 0.2s;
+}
 
+.pokebutton:hover {
+  background: #dc3545;
+  border: 2px solid black;
 }
 
 .navbar {
   background: #dc3545;
+  border-bottom: 3px solid #000;
+}
+
+a {
+  color:#f1bb4e;
+}
+
+a:hover{
+  color:#dc3545;
+}
+
+footer {
+  background:  #000;
+  color: #fff;
+  margin-top: 20px;
+  padding: 10px 10px;
 }
 
 @media all and (max-width: 500px) {
@@ -28,7 +64,6 @@
 }
 
 @media (max-width:750px){
-  /* shared code */
   .pokemon-list {
     grid-gap: 10px;
   }
