--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 .pokemon-list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
     margin: 100px 10px;
     list-style: none;
@@ -23,7 +23,8 @@ body {
   text-decoration: none;
   color: #fff;
   text-align: center;
-  transition: all 0.2s;
+  transition: all 0.3s;
+  width: 200px;
 }
 
 .pokebutton:hover {
@@ -42,6 +43,33 @@ a {
 
 a:hover{
   color:#dc3545;
+}
+
+.modal-header{
+  background: #dc3545;
+  border-bottom: 3px solid #000;
+  color: #fff;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #bbb;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+#myBtn:hover {
+  background-color: #dc3545;
+  border: 2px solid #000;
 }
 
 footer {
