--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ a:hover{
   border: none;
   outline: none;
   background-color: #bbb;
-  color: white;
+  color: #fff;
   cursor: pointer;
   padding: 15px;
   border-radius: 10px;
